--- a/BlazorGithubSample/BlazorGithubSample.csproj
+++ b/BlazorGithubSample/BlazorGithubSample.csproj
@@ -13,4 +13,16 @@
     <DotNetCliToolReference Include="Microsoft.AspNetCore.Blazor.Cli" Version="0.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <BlazorGenerate Remove="Containers\Index.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <BlazorGenerate Remove="Components\SearchForm.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <BlazorGenerate Remove="Components\SearchResultList.cshtml" />
+  </ItemGroup>
+
 </Project>
